# medic

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release.yml
src/: checks.rs  lib.rs  tests.rs  types.rs
