[package]
authors = ["Arvid Norlander"]
categories = ["command-line-interface"]
description = "Library for self-diagnostic output for command line tools"
edition = "2021"
exclude = ["/.github/"]
keywords = ["diagnostic", "cli"]
license = "MPL-2.0"
name = "medic"
repository = "https://github.com/VorpalBlade/medic"
rust-version = "1.75.0"
version = "0.2.0"

[dependencies]
anstream = "0.6.13"
anstyle = "1.0.6"
os_info = { version = "3.8.0", default-features = false }
rustc_version_runtime = { version = "0.3.0", default-features = false }
strum = { version = "0.26.2", default-features = false, features = [
    "derive",
    "std",
] }
thiserror = "1.0.58"

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"
