[package]
authors = ["Arvid Norlander"]
categories = ["command-line-interface"]
description = "Library for self-diagnostic output for command line tools"
edition = "2021"
exclude = ["/.github/"]
keywords = ["diagnostic", "cli"]
license = "MPL-2.0"
name = "medic"
repository = "https://github.com/VorpalBlade/medic"
rust-version = "1.75.0"
version = "0.3.0"

[dependencies]
anstream = "0.6.14"
anstyle = "1.0.7"
os_info = { version = "3.8.2", default-features = false }
rustc_version_runtime = { version = "0.3.0", default-features = false }
strum = { version = "0.26.3", default-features = false, features = [
    "derive",
    "std",
] }
thiserror = "1.0.62"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.0"

[lints.rust]
rust-2018-idioms = "warn"
unreachable_pub = "warn"

[lints.clippy]
doc_markdown = "warn"
needless_pass_by_value = "warn"
ptr_as_ptr = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_used = "warn"
