[package]
authors = ["Arvid Norlander"]
categories = ["command-line-interface"]
description = "Library for self-diagnostic output for command line tools"
edition = "2021"
exclude = ["/.github/"]
keywords = ["diagnostic", "cli"]
license = "MPL-2.0"
name = "medic"
repository = "https://github.com/VorpalBlade/medic"
rust-version = "1.75.0"
version = "0.3.1"

[dependencies]
anstream = "0.6.18"
anstyle = "1.0.10"
os_info = { version = "3.8.2", default-features = false }
rustc_version_runtime = { version = "0.3.0", default-features = false }
strum = { version = "0.26.3", default-features = false, features = [
    "derive",
    "std",
] }
thiserror = { version = "2.0.1", default-features = false }

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.1"

[lints.rust]
elided_lifetimes_in_paths = "warn"
keyword_idents = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[lints.clippy]
assigning_clones = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
equatable_if_let = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
format_push_string = "warn"
ignored_unit_patterns = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
needless_pass_by_value = "warn"
or_fun_call = "warn"
ptr_as_ptr = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_repetition_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_safety_doc = "warn"
unnested_or_patterns = "warn"
unwrap_used = "warn"
use_self = "warn"
wildcard_imports = "warn"
